<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_header_text">Are you\n Moonstruck?</string>
    <string name="reset_button_text">reset</string>
    <string name="edittext_hint">Type answer here</string>
    <string name="question01_label">Question #1:</string>
    <string name="question01_text">In the opening scene, what is the name of the funeral home Loretta enters?</string>
    <string name="question01_answer">Nucciarone</string>
    <string name="question02_label">Question #2:</string>
    <string name="question02_text">In which restaurant do Loretta and Johnny get engaged?</string>
    <string name="question02_answer">Gran Ticino</string>
    <string name="question02_guess1">Luna</string>
    <string name="question02_guess2">Cammareri</string>
    <string name="question02_guess3">Maggiano\'s</string>
    <string name="question03_label">Question #3:</string>
    <string name="question03_text">What does Loretta consider good luck for her and Johnny\'s marriage? Mark all that apply</string>
    <string name="question03_guess1">Kneeling down to propose</string>
    <string name="question03_guess2">A church wedding</string>
    <string name="question03_guess3">Wearing a wedding dress</string>
    <string name="question03_guess4">Father of bride gives her away</string>
    <string name="question04_label">Question #4:</string>
    <string name="question04_text">How many years has it been since Johnny spoke to his brother Ronny?</string>
    <string name="question04_answer">5</string>
    <string name="question04_guess1">10</string>
    <string name="question04_guess2">3</string>
    <string name="question04_guess3">1</string>
    <string name="question05_label">Question #5:</string>
    <string name="question05_text">What is the gate number and flight number of Johnny\'s trip to Italy?</string>
    <string name="question05_answer_gate">43</string>
    <string name="question05_answer_flight">604</string>
    <string name="q5_textbox1_hint">Gate #</string>
    <string name="q5_textbox2_hint">Flight #</string>
    <string name="question06_label">Question #6:</string>
    <string name="question06_text">How many dogs does Loretta\'s grandfather have?</string>
    <string name="question06_answer">5</string>
    <string name="question06_guess1">3</string>
    <string name="question06_guess2">4</string>
    <string name="question06_guess3">6</string>
    <string name="question07_label">Question #7:</string>
    <string name="question07_text">How much does Mr. Castorini quote the couple to fix the plumbing?</string>
    <string name="question07_hint">Enter a number. No decimal.</string>
    <string name="question07_answer">10800</string>
    <string name="question08_label">Question #8:</string>
    <string name="question08_text">What is the name of the beauty shop Loretta goes to before the opera?</string>
    <string name="question08_answer">Cinderella</string>
    <string name="question08_guess1">Sleeping Beauty</string>
    <string name="question08_guess2">Snow White</string>
    <string name="question08_guess3">Tinkerbell</string>
    <string name="question09_label">Question #9:</string>
    <string name="question09_text">According to Loretta\'s mother, Rose, why do men chase women?</string>
    <string name="question09_answer">They fear death</string>
    <string name="question09_guess1">Nerves</string>
    <string name="question09_guess2">Women are charming</string>
    <string name="question09_guess3">They\'re lonely</string>
    <string name="question10_label">Question #10:</string>
    <string name="question10_text">Which opera do Loretta and Ronnny attend?</string>
    <string name="question10_answer">La Boheme</string>
    <string name="question10_guess1">Tosca</string>
    <string name="question10_guess2">Madama Butterfly</string>
    <string name="question10_guess3">La Traviata</string>
    <string name="question11_label">Question #11:</string>
    <string name="question11_text">Where does Johnny forget his suitcases?</string>
    <string name="question11_guess1">His mother\'s house.</string>
    <string name="question11_guess2">The airport.</string>
    <string name="question11_guess3">The cab.</string>
    <string name="question11_guess4">The Castorinis\' house.</string>
    <string name="question12_label">Question #12:</string>
    <string name="question12_text">Why does Johnny break off the engagement?</string>
    <string name="question12_answer">His mother will die if he gets married.</string>
    <string name="question12_guess1">He met someone in Italy.</string>
    <string name="question12_guess2">Loretta slept with Ronny.</string>
    <string name="question12_guess3">His mother told him to.</string>
    <string name="submit_button_text">Submit</string>
    <string name="result_msg_score">Score:</string>
    <string name="result_correct_text">Correct!</string>
    <string name="result_incorrect_text">Incorrect</string>
    <string name="correct_answer_text">The correct answer is:</string>
    <string name="congrats">Eccelente!</string>
    <string name="good_job">Good job.</string>
    <string name="try_again">Try again.</string>

</resources>
